Fix styling alignment of details

--- a/src/css/Result.css
+++ b/src/css/Result.css
@@ -1,65 +1,95 @@
 
 .result-container {
-    width: 75%;
-    margin: auto;
+    width: 90%;
+    margin: 0 auto;
     text-align: center;
     /* border: 1px solid blue; */
 }
 
 .result-detail-container {
-    height: 600px;
-    border: 2px solid red;
+    margin: auto;
+    border-radius: 7px;
+
+    border: 1px solid red;
 }
 
 .side-result-container {
     display: inline-block;
     text-align: left;
-    width: 50%;
     overflow: auto;
-    height: 100%;
+    vertical-align: top;
+    border-radius: 7px;
+    margin: 1%;
     
     /* border: 1px solid black; */
 }
 
-.result-text-content {
-    padding: 20px;
-
-    /* border: 1px black solid; */
+.left-side {
+    width: 50%;
 }
 
-/* .reviews-container {
-    overflow: auto;
-} */
+.right-side {
+    width: 44%;
+}
 
-/* .review {
+.contact-hours-photo-container {
+    padding: 2%;
+    border-radius: 7px;
+    border: solid black 1px;
+}
+
+.reviews-container {
+    text-align: left;
+    border: blue solid 1px;
+    padding: 10px;
+    border-radius: 7px;
     overflow: auto;
-} */
+    height: 80vh;
+}
+
+.review {
+    margin: 10px;
+    border-radius: 7px;
+    border: black 1px solid;
+}
+
+.review p, span{
+    padding: 5px;
+}
 
 #restaurant-main-img {
     width: 100%;
     height: 100px;
-    margin: 0;
-    padding: 0;
+    vertical-align: top;
+    border-radius: 7px;
     /* border: solid 1px black; */
 }
 
 #restaurant-name {
     font-size: 1.5em;
-    margin-top: 0;
-    /* border: 1px black solid; */
+    margin-top: 2%;
+    text-align: left;
+    padding: 10px;
+    border-radius: 7px;
+    border: 1px black solid;
 }
 
 #restaurant-hours {
     display: inline-block;
     vertical-align: top;
-    margin-left: 10%;
+    text-align: left;
+    margin-left: 5%;
+    width: 45%;
 
     /* border: solid black 1px; */
 
 }
+
 #restaurant-contact {
     display: inline-block;
     vertical-align: top;
+    text-align: left;
+    width: 45%;
 
     /* border: solid black 1px; */
 
@@ -68,9 +98,9 @@
 
 #restaurant-hours p {
     /* border: solid black 1px; */
-    margin: 10px;
+    /* margin: 2%; */
 }
 
 #restaurant-contact p {
-    margin: 15px;
+    /* margin: 2%; */
 }
